# VibrationCompensation

./: .gitignore  LICENSE  Pipfile  env.yml  jupiterlab_extensions.txt  notes.txt  plotter.py  pyproject.toml  requirements.txt  vibration.py
bokeh_imports/: __init__.py
data/: 2019-04-0619.56.55.csv.txt
notebooks/: LinearAdvance.nb  LinearAdvance.py  PHSpline.py  Spring.py  analyse_accel.py  clothoid.py  fir.py  jerkfeedrate.py  jupyterlab.txt  prefilter.py  pressurefeedrate.py  requirements.txt  trajectories.py
vibration_compensation/: __init__.py  application.py  chandrupatla.py  corner_smoother.py  data.py  fir_toolpath.py  gcode_reader.py  phspline.py  plotter.py  pointtopoint_simulator.py  smoothed_toolpath.py  symbols.py
vibration_compensation/bokeh_imports/: __init__.py
vibration_compensation/tests/: test_corner_smoother.py  test_fir_toolpath.py  test_smoothed_toolpath.py
