[tool.poetry]
name = "VibrationCompensation"
version = "0.1.0"
description = ""
authors = ["Fred Sundvik"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
scipy = "1.3.1"
bokeh = "1.3.4"
colorcet = "1.0.1"

[tool.poetry.dev-dependencies]
sympy = "1.4"
jupyterlab = "1.1.4"
jupytext = "1.2.4"
pylint = "~2.3"
pytest = "4.6.6"
pytest-pycharm = "0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
